--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 01:49:00 AM</p>
+    <p class="lastupdate">09/09/2020 01:54:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">61.8&#176;F</td>
+        <td class="data">61.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">61.8&#176;F</td>
+        <td class="data">61.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">61.8&#176;F</td>
+        <td class="data">61.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.3&#176;F</td>
+        <td class="data">52.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">71%</td>
+        <td class="data">70%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.718 inHg (0.024)</td>
+        <td class="data">29.715 inHg (0.015)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph W (270&#176;)</td>
+        <td class="data">1 mph WNW (292&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">76.2&#176;F</td>
+        <td class="data">75.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          31
+          23
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:26:01 AM">
             78.1</span><br/>
-          <span title="01:47:01 AM">
-            76.2</span>
+          <span title="01:53:01 AM">
+            75.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
@@ -505,8 +505,8 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="01:06:01 AM">
-            43</span><br/>
+          <span title="01:52:01 AM">
+            44</span><br/>
           <span title="12:00:01 AM">
             42</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 11 hours, 2 minutes</td>
+      <td class="data">7 days, 11 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 11 hours, 2 minutes</td>
+      <td class="data">7 days, 11 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
