--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 03:29:00 AM</p>
+    <p class="lastupdate">09/09/2020 03:34:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">60.2&#176;F</td>
+        <td class="data">60.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">60.2&#176;F</td>
+        <td class="data">60.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">60.2&#176;F</td>
+        <td class="data">60.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.1&#176;F</td>
+        <td class="data">51.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">72%</td>
+        <td class="data">73%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.733 inHg (0.027)</td>
+        <td class="data">29.734 inHg (0.029)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NNW (338&#176;)</td>
+        <td class="data">2 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">76.0&#176;F</td>
+        <td class="data">75.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">43%</td>
+        <td class="data">44%</td>
       </tr>
     </tbody>
   </table>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             65.4</span><br/>
-          <span title="03:24:33 AM">
-            60.2</span>
+          <span title="03:31:23 AM">
+            60.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
             117.5</span><br/>
-          <span title="03:24:33 AM (Wednesday)">
-            60.2</span>
+          <span title="03:31:23 AM (Wednesday)">
+            60.0</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="03:24:33 AM" class="loval">
-            60.2</span>
+          <span title="03:31:23 AM" class="loval">
+            60.0</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:24:33 AM (Wednesday)" class="loval">
-            60.2</span>
+          <span title="03:31:23 AM (Wednesday)" class="loval">
+            60.0</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="01:05:37 AM">
             54.3</span><br/>
-          <span title="01:16:55 AM">
-            51.1</span>
+          <span title="03:29:09 AM">
+            51.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:38 AM (Monday)">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="12:10:05 AM">
-            2</span><br/>
-          34
+          <span title="03:31:05 AM">
+            3</span><br/>
+          5
         </td>
         <td class="data new_row hilo_week">
           <span title="04:31:00 PM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          0
+          1
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 12 hours, 42 minutes</td>
+      <td class="data">7 days, 12 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 12 hours, 42 minutes</td>
+      <td class="data">7 days, 12 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
