--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 03:34:00 AM</p>
+    <p class="lastupdate">09/09/2020 03:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">60.0&#176;F</td>
+        <td class="data">59.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">60.0&#176;F</td>
+        <td class="data">59.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">60.0&#176;F</td>
+        <td class="data">59.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.3&#176;F</td>
+        <td class="data">51.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.734 inHg (0.029)</td>
+        <td class="data">29.734 inHg (0.028)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph N (0&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.8&#176;F</td>
+        <td class="data">75.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             65.4</span><br/>
-          <span title="03:31:23 AM">
-            60.0</span>
+          <span title="03:34:27 AM">
+            59.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
             117.5</span><br/>
-          <span title="03:31:23 AM (Wednesday)">
-            60.0</span>
+          <span title="03:34:27 AM (Wednesday)">
+            59.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="03:31:23 AM" class="loval">
-            60.0</span>
+          <span title="03:34:27 AM" class="loval">
+            59.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:31:23 AM (Wednesday)" class="loval">
-            60.0</span>
+          <span title="03:34:27 AM (Wednesday)" class="loval">
+            59.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="03:14:01 AM">
-            29.736</span><br/>
+          <span title="03:35:01 AM">
+            29.737</span><br/>
           <span title="12:01:01 AM">
             29.700</span>
         </td>
@@ -407,7 +407,7 @@
       <tr>
         <td class="label">Wind Average</td>
         <td class="data new_row hilo_day">
-          0</td>
+          1</td>
         <td class="data new_row hilo_week">
           2</td>
         <td class="data new_row hilo_month">
@@ -444,7 +444,7 @@
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          346
+          347
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 12 hours, 47 minutes</td>
+      <td class="data">7 days, 12 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 12 hours, 47 minutes</td>
+      <td class="data">7 days, 12 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
