--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 03:44:00 AM</p>
+    <p class="lastupdate">09/09/2020 03:49:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">59.8&#176;F</td>
+        <td class="data">59.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">59.8&#176;F</td>
+        <td class="data">59.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">59.8&#176;F</td>
+        <td class="data">59.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.5&#176;F</td>
+        <td class="data">51.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.730 inHg (0.026)</td>
+        <td class="data">29.734 inHg (0.032)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             65.4</span><br/>
-          <span title="03:43:19 AM">
-            59.7</span>
+          <span title="03:46:45 AM">
+            59.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
             117.5</span><br/>
-          <span title="03:43:19 AM (Wednesday)">
-            59.7</span>
+          <span title="03:46:45 AM (Wednesday)">
+            59.6</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="03:43:19 AM" class="loval">
-            59.7</span>
+          <span title="03:46:45 AM" class="loval">
+            59.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:43:19 AM (Wednesday)" class="loval">
-            59.7</span>
+          <span title="03:46:45 AM (Wednesday)" class="loval">
+            59.6</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 12 hours, 57 minutes</td>
+      <td class="data">7 days, 13 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 12 hours, 57 minutes</td>
+      <td class="data">7 days, 13 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
