--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 03:49:00 AM</p>
+    <p class="lastupdate">09/09/2020 03:54:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">59.7&#176;F</td>
+        <td class="data">59.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">59.7&#176;F</td>
+        <td class="data">59.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">59.7&#176;F</td>
+        <td class="data">59.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.4&#176;F</td>
+        <td class="data">51.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.734 inHg (0.032)</td>
+        <td class="data">29.735 inHg (0.034)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph N (0&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">76.0&#176;F</td>
+        <td class="data">76.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 13 hours, 2 minutes</td>
+      <td class="data">7 days, 13 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 13 hours, 2 minutes</td>
+      <td class="data">7 days, 13 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
